# vexor

./: .gitignore  LICENSE  README.md  pyproject.toml
bench/: concurrency_bench.py  filter_bench.py  latency_percentile_bench.py  memory_bench.py  recall_qps.py
docs/: DESIGN.md  TUNING.md  VIZ.md
src/vexor/: __init__.py  db.py
src/vexor/concurrency/: __init__.py  locks.py  sharded.py
src/vexor/distance/: __init__.py  kernels.py  kernels_jit.py
src/vexor/filtering/: __init__.py  adaptive.py  bitmap.py
src/vexor/hooks/: __init__.py  base.py  noop.py  streamlit_hook.py
src/vexor/indexes/: __init__.py  flat.py  hnsw.py  ivf.py  ivfpq.py  kdtree.py  lsh.py
src/vexor/quantization/: __init__.py  pq.py  sq.py
src/vexor/storage/: __init__.py  format.py  vector_store.py  wal.py
tests/: test_correctness.py  test_deletion.py  test_filter.py  test_recovery.py
viz/: app.py
viz/pages/: 01_flat.py  02_kdtree.py  03_hnsw.py  04_ivf.py  05_ivfpq.py  06_benchmark.py  07_filter.py
